# screed

./: .coveragerc  .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  ChangeLog  Doxyfile.in  MANIFEST  MANIFEST.in  Makefile  README  README.md  README.txt  TODO  conf.py  get_version.py  jenkins-build.sh  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: python.yml
benchmarks/: faGen.py  fqGen.py  fqToFaConvert.py  pgres_login.txt  runall  screedCreateTimeit.py  screedNameTimeit.py  screedSliceTimeit.py  screedTimeit.py  screedTimeit1M.py
benchmarks/mysql/: create.py  mydb.py  mysqlCreateTimeit.py  mysqlTimeit.py  mysql_login.txt
benchmarks/pgres/: create.py  drop.py  pdbConstants.py  pgdb.py  pgresCreateTimeit.py  pgresTimeit.py
bigtests/: __init__.py
doc/: COPYRIGHT.txt  LICENSE.rst  LICENSE.txt  Makefile  RELEASE-0.5.txt  RELEASE-0.8.md  RELEASE-0.8.txt  conf.py  example.txt  index.rst  index.txt  known-issues.txt  releases.txt  schema.txt  screed.html  screed.rst  screed.txt
doc/dev/: coding-guidelines-and-review.rst  coding-guidelines-and-review.txt  index.rst  index.txt  known-issues.txt  parsers.rst  release-checklist.rst  release-checklist.txt  releases.txt
doc/release-notes/: RELEASE-0.5.rst  RELEASE-0.5.txt  RELEASE-0.8.md  RELEASE-0.8.rst  RELEASE-0.9.md  RELEASE-0.9.rst  RELEASE-1.0.md  index.rst  index.txt
doc/user/: known-issues.rst  known-issues.txt
legacy/: jenkins-build.sh
screed/: DBConstants.py  __init__.py  __main__.py  _version.py  conversion.py  createdb.py  createscreed.py  dbConstants.py  dbEntries.py  dna.py  dump_fasta.py  dump_fastq.py  dump_to_fasta.py  dump_to_fastq.py  fadbm.py  fasta.py  fastq.py  fqdbm.py  hava.py  openscreed.py  pygr_api.py  screedDB.py  screedExtension.py  screedRecord.py  screedUtility.py  screed_pygr_api.py  seqparse.py  toFasta.py  toFastq.py  utils.py
screed/tests/: __main__.py  havaGen.py  screed_tst_utils.py  test.fa.bz2  test_attriberror.py  test_convert.py  test_db.py  test_dictionary.py  test_dna.py  test_fasta.py  test_fasta_recover.py  test_fastq.py  test_fastq_recover.py  test_hava_methods.py  test_nodb.py  test_open.py  test_open_cm.py  test_pygr_api.py  test_record.py  test_shell.py  test_streaming.py
screed/tests/test-data/: test-whitespace.fa  test.fa  test.fastq.bz2  test.hava_screed
sqeaqr/: __init__.py  dbEntries.py  faByIntDict.py  faByKeyDict.py  fadbm.py  fqByIntDict.py  fqByKeyDict.py  fqdbm.py  seqparse.py  sqeaqrDB.py  sqeaqrExtension.py  sqeaqrUtility.py  sqeaqr_pygr_api.py  toFasta.py  toFastq.py
tests/: __init__.py  test.fastq  test.hava  test_pygr_api.py
